[package]
name = "headermeup"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
cfg-if = "1"
console_error_panic_hook = "0.1"
http = "0.2"
leptos = { path = "../../../github/leptos/leptos" }
leptos_integration_utils = { path = "../../../github/leptos/integrations/utils", optional = true }
leptos_meta = { path = "../../../github/leptos/meta" }
leptos_router = { path = "../../../github/leptos/router" }
leptos-spin = { path = "../../../github/leptos-spin", optional = true }
serde = "1.0.192"
spin-sdk = { version = "2.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[workspace]

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:wasm-bindgen"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/spin",
  "dep:spin-sdk",
  "dep:leptos-spin",
  "dep:leptos_integration_utils"
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name   
output-name = "headermeup"
style-file = "style/main.scss"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
